<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop= "30dp"
        android:layout_marginBottom= "20dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:stretchColumns="1">
            
			<TableRow>	 
				 <TextView
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:text="@string/publisher_label"
	                android:textStyle="bold" 
	                android:layout_marginLeft = "10dp"/>
				 
	            <TextView
	                android:id="@+id/textView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft = "5dp" />
			</TableRow>
			<TableRow>	
			    <TextView
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:text="@string/platforma_label"
	                android:textStyle="bold" 
	                android:layout_marginLeft = "10dp"/>
			    
	            <TextView
	                android:id="@+id/textView3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" 
	                android:layout_marginLeft = "5dp"/>
			</TableRow>
			<TableRow>	
			    <TextView
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:text="@string/gen_label"
	                android:textStyle="bold" 
	                android:layout_marginLeft = "10dp"/>
			    
	            <TextView
	                android:id="@+id/textView4"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" 
	                android:layout_marginLeft = "5dp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

     <TextView
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:text="@string/detalii_label"
	     android:textStyle="bold" />
     
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <ImageView
        android:layout_width="205dp"
        android:layout_height="105dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/reclama4" />

</LinearLayout>
